Included pybb Forum app, updated requirements and settings Included static context processor New app pybb_custom for customizing Forum behavior Updates in base.html template to show messages and breadscrumbs Added namespaces for URLs Some PEP8

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ psycopg2
 django-registration
 -e git://github.com/sromero84/django-registration-email#egg=registration_email
 django-debug-toolbar
+-e git://github.com/sromero84/pybbm#egg=pybb
+# By recommendation for pybbm,
+# https://pybbm.readthedocs.org/en/latest/install.html#fresh-project
+django-pure-pagination
+Pillow-PIL
+sorl-thumbnail
